Closed Bug 167305 Opened 23 years ago Closed 23 years ago

Folded references: headers are parsed incorrectly

Categories

(MailNews Core :: Database, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: emaijala+moz, Assigned: emaijala+moz)

Details

Attachments

(1 file)

Folded (split to multiple lines) references: headers in messages are parsed incorrectly, leading to wrong threading. Patch coming up.
Comment on attachment 98285 [details] [diff] [review] Patch to fix parsing of references (bypass cr and lf), also few indentation cleanups great, sr=bienvenu, thx.
Attachment #98285 - Flags: superreview+
Comment on attachment 98285 [details] [diff] [review] Patch to fix parsing of references (bypass cr and lf), also few indentation cleanups Looks reasonable. Depending on how likely I thought it would be that |*ptr == 0|, I might have moved that half of the |&&| to the front. For future reference, please use pre-increment when that it what you mean (yes, I see that you didn't touch that part of the code).
Attachment #98285 - Flags: review+
Thanks. Looks like the first half is false much more often than the second, so I think the current order is good.
why this change? @@ -395,7 +395,6 @@ } else { ParseReferences(references); - m_numReferences = m_references.Count(); } SetUInt32Column(m_numReferences, m_mdb->m_numReferencesColumnToken);
it's just whitespace, I believe. Ere, can you do -uw diff?
yes, that line is not needed because ::parseReferences does the same thing.
Yes, I was just about to say that. Forgot to tell about it before.
Status: NEW → ASSIGNED
Comment on attachment 98285 [details] [diff] [review] Patch to fix parsing of references (bypass cr and lf), also few indentation cleanups a=asa (on behalf of drivers) for checkin to 1.2a
Attachment #98285 - Flags: approval+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
QA Contact: gayatri → laurel
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: