Bug 167305, Folded references: headers are parsed incorrectly r=scc, sr=bienvenu, a=asa